# agenthalo-playground

./: .gitignore  README.md
.github/workflows/: deploy.yml
dashboard/: agenthalo-system-diagram.html  app.js  build-info.json  cockpit.css  cockpit.js  codeguard.css  codeguard.html  codeguard.js  demo-api.js  demo-banner.js  forge.css  forge.html  forge.js  gates.css  gates.html  gates.js  genesis-docs.js  index.html  lean.js  mcp-tools.js  mock-data.js  observatory-test.html  observatory.css  observatory.js  orchestration.css  orchestration.js  proof-explorer.js  proof-game.css  proof-game.js  route-manifest.txt  skills.js  style.css  system-monitor.js
dashboard/demo-fixtures/: attestations.json  capabilities.json  cockpit-session-action.json  codeguard-audit.json  codeguard-config.json  codeguard-graph.json  codeguard-manifest.json  config.json  costs-by-model.json  costs.json  crypto-status.json  deploy-catalog.json  deploy-preflight.json  explorer-status.json  files-tree.json  forge-templates.json  governor-status.json  lean-scan.json  library-sessions.json  mcp-categories.json  mcp-tools.json  mcp-usage-stats.json  metrics-topology.json  nucleusdb-browse.json  nucleusdb-proofs.json  nucleusdb-sql.json  nucleusdb-stats.json  nucleusdb-status.json  observatory-status.json  observatory-treemap.json  orch-agents.json  orch-graph.json  orch-mesh.json  p2pclaw-briefing.json  p2pclaw-wheel.json  (+9 more)
scripts/: generate_fixtures.py  install-hooks.sh  transform_from_agenthalo.sh  validate_playground.sh
src/: demo-api.js  demo-banner.js
wasm/: Cargo.toml
wasm/src/: lib.rs
(+43 files in other folders)
