[package]
name = "agenthalo-playground-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM modules for AgentHALO Playground — progressive enhancement"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Phase B: uncomment as modules are implemented
# sha2 = "0.10"
# ed25519-dalek = { version = "2.2", features = ["rand_core"] }
# ml-kem = { version = "0.2", features = ["zeroize"] }
# getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = "s"
lto = true
